--- a/index.html
+++ b/index.html
@@ -1,27 +1,27 @@
 <html>
 <head>
     <title>Store RiceBowl</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="assets\style.css">
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="header">
-        <div class="overlay"></div>
-        <div class="navbar">
-            <div class="logo"></div>
-            <ul class="menu">
+    <div class="headerindex">
+        <div class="overlayindex"></div>
+        <div class="navbarindex">
+            <div class="logoindex"></div>
+            <ul class="menuindex">
                 <li><a href="#">HOME</a></li>
                 <li><a href="about.html">ABOUT US</a></li>
                 <li><a href="menu.html">MENU</a></li>
                 <li><a href="contact.html">CONTACT US</a></li>
             </ul>
-            <div class="icons">
+            <div class="iconsindex">
                 <i class="fas fa-phone"></i> Phone: +62 859 8029 38075
                 <i class="fas fa-user"></i> My Account
             </div>
 
         </div>
-        <div class="content">
+        <div class="contentindex">
             <h1>RICE BOWL'S FOOD</h1>
             <p>Selamat datang di kedai rice bowl dengan berbagai menu lezat.</p>
             <a href="menu.html" class="btn">MENU</a>
