--- a/menu.html
+++ b/menu.html
@@ -28,7 +28,7 @@
         <div class="menu-list">
             <!-- Menu Item 1 -->
             <div class="menu-item">
-                <img src="ricebowl1.jpg" alt="Dish 1">
+                <img src="assets\image\ricebowl1.jpg" alt="Dish 1">
                 <h3>Teriyaki Chicken Bowls</h3>
                 <p>Ayam teriyaki yang lezat disajikan dengan sayuran.</p>
                 <p class="price">Rp. 20.400</p>
@@ -37,7 +37,7 @@
 
             <!-- Menu Item 2 -->
             <div class="menu-item">
-                <img src="ricebowl2.jpg" alt="Dish 2">
+                <img src="assets\image\ricebowl2.jpg" alt="Dish 2">
                 <h3>Vegan Korean Bibimbap</h3>
                 <p>Potongan daging ayam yang lezat dengan sayuran dan telur di atasnya.</p>
                 <p class="price">Rp. 21.200</p>
@@ -46,7 +46,7 @@
 
             <!-- Menu Item 3 -->
             <div class="menu-item">
-                <img src="ricebowl3.jpg" alt="Dish 3">
+                <img src="assets\image\ricebowl3.jpg" alt="Dish 3">
                 <h3>Yoshinoya gyudon</h3>
                 <p>Irisan daging ayam lezat dengan kombinasi telur setengah matang.</p>
                 <p class="price">Rp. 20.700</p>
