--- a/menu.html
+++ b/menu.html
@@ -28,7 +28,7 @@
         <div class="menu-list">
             <!-- Menu Item 1 -->
             <div class="menu-item">
-                <img src="assets\image\ricebowl1.jpg" alt="Dish 1">
+                <img src="assets/image/ricebowl1.jpg" alt="Dish 1">
                 <h3>Teriyaki Chicken Bowls</h3>
                 <p>Ayam teriyaki yang lezat disajikan dengan sayuran.</p>
                 <p class="price">Rp. 20.400</p>
