--- a/menu.html
+++ b/menu.html
@@ -37,7 +37,7 @@
 
             <!-- Menu Item 2 -->
             <div class="menu-item">
-                <img src="assets\image\ricebowl2.jpg" alt="Dish 2">
+                <img src="assets/image/ricebowl2.jpg" alt="Dish 2">
                 <h3>Vegan Korean Bibimbap</h3>
                 <p>Potongan daging ayam yang lezat dengan sayuran dan telur di atasnya.</p>
                 <p class="price">Rp. 21.200</p>
