--- a/menu.html
+++ b/menu.html
@@ -46,7 +46,7 @@
 
             <!-- Menu Item 3 -->
             <div class="menu-item">
-                <img src="assets\image\ricebowl3.jpg" alt="Dish 3">
+                <img src="assets/image/ricebowl3.jpg" alt="Dish 3">
                 <h3>Yoshinoya gyudon</h3>
                 <p>Irisan daging ayam lezat dengan kombinasi telur setengah matang.</p>
                 <p class="price">Rp. 20.700</p>
