--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Restaurant & Drinks</title>
-    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="assets\style.css">
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -37,22 +37,24 @@
             Kami berkomitmen terhadap keberlanjutan, dengan mengambil bahan makanan dari pertanian dan produsen lokal jika memungkinkan.
         </p>
 
-        <h2>Anggota Tim</h2>
+       <h2>Anggota Tim</h2>
         <div class="team">
             <div class="team-member">
+                <img src="assets\image\savinka.jpg" alt="Savinka Krizanantha J.A" width="150" height="150">
                 <h3>Savinka Krizanantha J.A</h3>
                 <p></p>
             </div>
             <div class="team-member">
-                <h3>Kukuh Adji P</h3>
+                <img src="assets\image\kukuh.jpg" alt="Kukuh Adji P" width="150" height="150">
+                <h3>Kukuh Adji Pramuktilaksono</h3>
                 <p></p>
             </div>
             <div class="team-member">
+                <img src="assets\image\fatni.jpg" alt="Fathir Rahma Dhani" width="150" height="150">
                 <h3>Fathir Rahma Dhani</h3>
                 <p></p>
             </div>
         </div>
-    </div>
 </body>
 <script>
     // Ambil semua tautan dalam menu
